src/main/java/com/example/finalprojectdtomarket/errors/exception/Exception404.java
package com.example.finalprojectdtomarket.errors.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }
}